--- a/ansible/roles/swarm-node/files/backend.conf
+++ b/ansible/roles/swarm-node/files/backend.conf
@@ -8,7 +8,7 @@ server {
 }
 server {
     listen 443;
-    server_name ~^(?<container>.*)\-console\.swarm.codeground.xyz$  ~^(?<container>.*)\-console\.codeground.xyz$;
+    server_name ~^(?<container>.*)\-console\.swarm.codeground.xyz$  ~^(?<container>.*)\-console\.codeground.xyz$ ~^(?<container>.*)\-console\.codepicnic.com$;
   ssl on;
   ssl_certificate /etc/nginx/conf.d/nginx.crt;
   ssl_certificate_key /etc/nginx/conf.d/nginx.key;
@@ -39,7 +39,7 @@ access_log  /var/log/nginx/access.log  main;
 
 server {
     listen 443;
-    server_name ~^(?<container>.*)\-(bash|php|php7|laravel|elixir|mono)\.swarm.codeground.xyz$ ~^(?<container>.*)\-(bash|php|php7|laravel|elixir|mono)\.swarm.codeground.xyz$;
+    server_name ~^(?<container>.*)\-(bash|php|php7|laravel|elixir|mono)\.swarm.codeground.xyz$ ~^(?<container>.*)\-(bash|php|php7|laravel|elixir|mono)\.swarm.codeground.xyz$ ~^(?<container>.*)\-(bash|php|php7|laravel|elixir|mono)\.codepicnic.com$;
   ssl on;
   ssl_certificate /etc/nginx/conf.d/nginx.crt;
   ssl_certificate_key /etc/nginx/conf.d/nginx.key;
@@ -70,7 +70,7 @@ access_log  /var/log/nginx/access.log  main;
 
 server {
     listen 443;
-    server_name ~^(?<container>.*)\-(phoenix)\.swarm.codeground.xyz$ ~^(?<container>.*)\-(phoenix)\.codeground.xyz$;
+    server_name ~^(?<container>.*)\-(phoenix)\.swarm.codeground.xyz$ ~^(?<container>.*)\-(phoenix)\.codeground.xyz$ ~^(?<container>.*)\-(phoenix)\.codepicnic.com$;
   ssl on;
   ssl_certificate /etc/nginx/conf.d/nginx.crt;
   ssl_certificate_key /etc/nginx/conf.d/nginx.key;
@@ -99,7 +99,7 @@ access_log  /var/log/nginx/access.log  main;
 }
 server {
     listen 443;
-    server_name ~^(?<container>.*)\-(rails|ruby23|ruby22)\.swarm.codeground.xyz$ ~^(?<container>.*)\-(rails|ruby23|ruby22)\.codeground.xyz$;
+    server_name ~^(?<container>.*)\-(rails|ruby23|ruby22)\.swarm.codeground.xyz$ ~^(?<container>.*)\-(rails|ruby23|ruby22)\.codeground.xyz$ ~^(?<container>.*)\-(rails|ruby23|ruby22)\.codepicnic.com$;
   ssl on;
   ssl_certificate /etc/nginx/conf.d/nginx.crt;
   ssl_certificate_key /etc/nginx/conf.d/nginx.key;
