--- a/ansible/roles/swarm-node/files/backend.conf
+++ b/ansible/roles/swarm-node/files/backend.conf
@@ -7,124 +7,122 @@ server {
 
 }
 server {
-    listen 443;
-    server_name ~^(?<container>.*)\-console\.swarm.codeground.xyz$  ~^(?<container>.*)\-console\.codeground.xyz$ ~^(?<container>.*)\-console\.codepicnic.com$;
-  ssl on;
-  ssl_certificate /etc/nginx/conf.d/nginx.crt;
-  ssl_certificate_key /etc/nginx/conf.d/nginx.key;
-  ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
-  ssl_prefer_server_ciphers on;
-  ssl_ciphers AES256+EECDH:AES256+EDH:!aNULL;
-  add_header 'Access-Control-Allow-Origin' '*';
-  error_page 502 /502.html;
-  location = /502.html {
-    add_header 'Access-Control-Allow-Origin' '*';
-    rewrite ^ https://codepicnic.com/502;
-  }
+   listen 443;
+   server_name ~^(?<container>.*)\-console\.swarm.codeground.xyz$  ~^(?<container>.*)\-console\.codeground.xyz$ ~^(?<container>.*)\-console\.codepicnic.com$;
+   ssl on;
+   ssl_certificate /etc/nginx/conf.d/nginx.crt;
+   ssl_certificate_key /etc/nginx/conf.d/nginx.key;
+   ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
+   ssl_prefer_server_ciphers on;
+   ssl_ciphers AES256+EECDH:AES256+EDH:!aNULL;
+   add_header 'Access-Control-Allow-Origin' '*';
+   error_page 502 /502.html;
+   location = /502.html {
+      add_header 'Access-Control-Allow-Origin' '*';
+      rewrite ^ https://codepicnic.com/502;
+   }
 
-error_log /var/log/nginx/error.log warn;
-access_log  /var/log/nginx/access.log  main;
+   error_log /var/log/nginx/swarm.codepicnic.com-error.log warn;
+   access_log  /var/log/nginx/swarm.codepicnic.com-access.log  main;
 
-    location / {
-    proxy_set_header Upgrade $http_upgrade;
-    proxy_set_header Connection "upgrade";
-    proxy_http_version 1.1;
-    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    proxy_set_header Host $host;
-                proxy_pass https://$container:15000;
+   location / {
+      proxy_set_header Upgrade $http_upgrade;
+      proxy_set_header Connection "upgrade";
+      proxy_http_version 1.1;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header Host $host;
+      proxy_pass https://$container:15000;
     }
-
 }
 
 
 server {
-    listen 443;
-    server_name ~^(?<container>.*)\-(bash|php|php7|laravel|elixir|mono)\.swarm.codeground.xyz$ ~^(?<container>.*)\-(bash|php|php7|laravel|elixir|mono)\.swarm.codeground.xyz$ ~^(?<container>.*)\-(bash|php|php7|laravel|elixir|mono)\.codepicnic.com$;
-  ssl on;
-  ssl_certificate /etc/nginx/conf.d/nginx.crt;
-  ssl_certificate_key /etc/nginx/conf.d/nginx.key;
-  ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
-  ssl_prefer_server_ciphers on;
-  ssl_ciphers AES256+EECDH:AES256+EDH:!aNULL;
-  add_header 'Access-Control-Allow-Origin' '*';
-  error_page 502 /502.html;
-  location = /502.html {
-    add_header 'Access-Control-Allow-Origin' '*';
-    rewrite ^ https://codepicnic.com/502;
-  }
+   listen 443;
+   server_name ~^(?<container>.*)\-(bash|php|php7|laravel|elixir|mono)\.swarm.codeground.xyz$ ~^(?<container>.*)\-(bash|php|php7|laravel|elixir|mono)\.swarm.codeground.xyz$ ~^(?<container>.*)\-(bash|php|php7|laravel|elixir|mono)\.codepicnic.com$;
+   ssl on;
+   ssl_certificate /etc/nginx/conf.d/nginx.crt;
+   ssl_certificate_key /etc/nginx/conf.d/nginx.key;
+   ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
+   ssl_prefer_server_ciphers on;
+   ssl_ciphers AES256+EECDH:AES256+EDH:!aNULL;
+   add_header 'Access-Control-Allow-Origin' '*';
+   error_page 502 /502.html;
+   location = /502.html {
+      add_header 'Access-Control-Allow-Origin' '*';
+      rewrite ^ https://codepicnic.com/502;
+   }
 
-error_log /var/log/nginx/error.log warn;
-access_log  /var/log/nginx/access.log  main;
+   error_log /var/log/nginx/swarm.codepicnic.com-error.log warn;
+   access_log  /var/log/nginx/swarm.codepicnic.com-access.log  main;
 
-    location / {
-    proxy_set_header Upgrade $http_upgrade;
-    proxy_set_header Connection "upgrade";
-    proxy_http_version 1.1;
-    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    proxy_set_header Host $host;
-                proxy_pass http://$container:8080;
+   location / {
+      proxy_set_header Upgrade $http_upgrade;
+      proxy_set_header Connection "upgrade";
+      proxy_http_version 1.1;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header Host $host;
+      proxy_pass https://$container:8080;
     }
-
 }
 
 
 server {
-    listen 443;
-    server_name ~^(?<container>.*)\-(phoenix)\.swarm.codeground.xyz$ ~^(?<container>.*)\-(phoenix)\.codeground.xyz$ ~^(?<container>.*)\-(phoenix)\.codepicnic.com$;
-  ssl on;
-  ssl_certificate /etc/nginx/conf.d/nginx.crt;
-  ssl_certificate_key /etc/nginx/conf.d/nginx.key;
-  ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
-  ssl_prefer_server_ciphers on;
-  ssl_ciphers AES256+EECDH:AES256+EDH:!aNULL;
-  add_header 'Access-Control-Allow-Origin' '*';
-  error_page 502 /502.html;
-  location = /502.html {
-    add_header 'Access-Control-Allow-Origin' '*';
-    rewrite ^ https://codepicnic.com/502;
-  }
+   listen 443;
+   server_name ~^(?<container>.*)\-(phoenix)\.swarm.codeground.xyz$ ~^(?<container>.*)\-(phoenix)\.codeground.xyz$ ~^(?<container>.*)\-(phoenix)\.codepicnic.com$;
+   ssl on;
+   ssl_certificate /etc/nginx/conf.d/nginx.crt;
+   ssl_certificate_key /etc/nginx/conf.d/nginx.key;
+   ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
+   ssl_prefer_server_ciphers on;
+   ssl_ciphers AES256+EECDH:AES256+EDH:!aNULL;
+   add_header 'Access-Control-Allow-Origin' '*';
+   error_page 502 /502.html;
+   location = /502.html {
+      add_header 'Access-Control-Allow-Origin' '*';
+      rewrite ^ https://codepicnic.com/502;
+   }
 
-error_log /var/log/nginx/error.log warn;
-access_log  /var/log/nginx/access.log  main;
+   error_log /var/log/nginx/swarm.codepicnic.com-error.log warn;
+   access_log  /var/log/nginx/swarm.codepicnic.com-access.log  main;
 
-    location / {
-    proxy_set_header Upgrade $http_upgrade;
-    proxy_set_header Connection "upgrade";
-    proxy_http_version 1.1;
-    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    proxy_set_header Host $host;
-                proxy_pass http://$container:4000;
+   location / {
+      proxy_set_header Upgrade $http_upgrade;
+      proxy_set_header Connection "upgrade";
+      proxy_http_version 1.1;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header Host $host;
+      proxy_pass https://$container:4000;
     }
-
 }
+
+
 server {
     listen 443;
     server_name ~^(?<container>.*)\-(rails|ruby23|ruby22)\.swarm.codeground.xyz$ ~^(?<container>.*)\-(rails|ruby23|ruby22)\.codeground.xyz$ ~^(?<container>.*)\-(rails|ruby23|ruby22)\.codepicnic.com$;
-  ssl on;
-  ssl_certificate /etc/nginx/conf.d/nginx.crt;
-  ssl_certificate_key /etc/nginx/conf.d/nginx.key;
-  ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
-  ssl_prefer_server_ciphers on;
-  ssl_ciphers AES256+EECDH:AES256+EDH:!aNULL;
-  add_header 'Access-Control-Allow-Origin' '*';
-  error_page 502 /502.html;
-  location = /502.html {
-    add_header 'Access-Control-Allow-Origin' '*';
-    rewrite ^ https://codepicnic.com/502;
-  }
+   ssl on;
+   ssl_certificate /etc/nginx/conf.d/nginx.crt;
+   ssl_certificate_key /etc/nginx/conf.d/nginx.key;
+   ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
+   ssl_prefer_server_ciphers on;
+   ssl_ciphers AES256+EECDH:AES256+EDH:!aNULL;
+   add_header 'Access-Control-Allow-Origin' '*';
+   error_page 502 /502.html;
+   location = /502.html {
+      add_header 'Access-Control-Allow-Origin' '*';
+      rewrite ^ https://codepicnic.com/502;
+   }
 
-error_log /var/log/nginx/error.log warn;
-access_log  /var/log/nginx/access.log  main;
+   error_log /var/log/nginx/swarm.codepicnic.com-error.log warn;
+   access_log  /var/log/nginx/swarm.codepicnic.com-access.log  main;
 
-    location / {
-    proxy_set_header Upgrade $http_upgrade;
-    proxy_set_header Connection "upgrade";
-    proxy_http_version 1.1;
-    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    proxy_set_header Host $host;
-                proxy_pass http://$container:3000;
+   location / {
+      proxy_set_header Upgrade $http_upgrade;
+      proxy_set_header Connection "upgrade";
+      proxy_http_version 1.1;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header Host $host;
+      proxy_pass https://$container:3000;
     }
-
 }
 
 
