--- a/ansible/roles/base/tasks/main.yaml
+++ b/ansible/roles/base/tasks/main.yaml
@@ -1,6 +1,6 @@
   - name: apt-get update
     apt: update_cache=yes 
   - name: install tools
-    apt: name=iftop,apachetop,mlocate,s3cmd,htop,xfsprogs,telnet,dsniff,iotop,dstat,tcpdump state=latest
+    apt: name=iftop,apachetop,mlocate,s3cmd,htop,xfsprogs,telnet,dsniff,iotop,dstat,tcpdump,schedtool state=latest
   - name: upgrade ubuntu
     apt: upgrade=dist update_cache=yes 
