--- a/ansible/roles/swarm-node/tasks/main.yaml
+++ b/ansible/roles/swarm-node/tasks/main.yaml
@@ -29,7 +29,7 @@
        - redis_20160107
        - mariadb_20160325
   - name: pull images 
-    shell: docker pull registry.codepicnic.com:5000/codepicnic/{{ item }}
+    shell: docker pull {{ item }}
     with_items:
        - nginx
        - google/cadvisor
