--- a/ansible/roles/base/tasks/main.yaml
+++ b/ansible/roles/base/tasks/main.yaml
@@ -6,4 +6,4 @@
     apt: upgrade=dist update_cache=yes 
   - name: add sysctl 
     sysctl: name="{{ item.name }}" value="{{ item.value }}" state=present
-    with_items: sysctl_options
+    with_items: "{{ sysctl_options }}"
