new micro swarm master

--- a/ansible/deploy-micro-cluster.yaml
+++ b/ansible/deploy-micro-cluster.yaml
@@ -1,8 +1,8 @@
 - hosts: manager 
   roles:
-      - base
-      - reboot
-      - sysdig
+      #- base
+      #- reboot
+      #- sysdig
       - docker
       - newrelic
       - swarm
