--- a/ansible/deploy-swarm-cluster.yaml
+++ b/ansible/deploy-swarm-cluster.yaml
@@ -25,13 +25,14 @@
   become_method: sudo
 - hosts: node 
   roles:
-      - base
-      - aws-monitoring-scripts
-      - sysdig
-      - docker
-      - newrelic
-      - swarm
-      - swarm-node 
+      #- base
+      - ssh-keys
+        #- aws-monitoring-scripts
+        #- sysdig
+        #- docker
+        #- newrelic
+        #- swarm
+        #- swarm-node 
   remote_user: ubuntu
   become: yes
   become_user: root
