--- a/ansible/create-swarm-ami.yaml
+++ b/ansible/create-swarm-ami.yaml
@@ -9,6 +9,7 @@
       - aws-monitoring-scripts
       - sysdig
       - docker
+      - docker-apparmor
       - newrelic
       - swarm
       - swarm-node
