--- a/ansible/roles/swarm-node/files/backend.conf
+++ b/ansible/roles/swarm-node/files/backend.conf
@@ -8,7 +8,8 @@ server {
 }
 server {
    listen 443;
-   server_name ~^(?<container>.*)\-console\.swarm.codeground.xyz$  ~^(?<container>.*)\-console\.codeground.xyz$ ~^(?<container>.*)\-console\.codepicnic.com$;
+   #server_name ~^(?<container>.*)\-console\.swarm.codepicnic.com$  ~^(?<container>.*)\-console\.codeground.xyz$ ~^(?<container>.*)\-console\.codepicnic.com$;
+   server_name ~^(?<container>.*)\-console\.swarm.codepicnic.com$;
    ssl on;
    ssl_certificate /etc/nginx/conf.d/nginx.crt;
    ssl_certificate_key /etc/nginx/conf.d/nginx.key;
@@ -32,6 +33,35 @@ server {
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
       proxy_set_header Host $host;
       proxy_pass https://$container:15000;
+    }
+}
+
+server {
+   listen 443;
+   server_name ~^(?<container>.*)\-console\.codepicnic.com$;
+   ssl on;
+   ssl_certificate /etc/nginx/conf.d/nginx.crt;
+   ssl_certificate_key /etc/nginx/conf.d/nginx.key;
+   ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
+   ssl_prefer_server_ciphers on;
+   ssl_ciphers AES256+EECDH:AES256+EDH:!aNULL;
+   add_header 'Access-Control-Allow-Origin' '*';
+   error_page 502 /502.html;
+   location = /502.html {
+      add_header 'Access-Control-Allow-Origin' '*';
+      rewrite ^ https://codepicnic.com/502;
+   }
+
+   error_log /var/log/nginx/swarm.codepicnic.com-error.log warn;
+   access_log  /var/log/nginx/swarm.codepicnic.com-access.log  main;
+
+   location / {
+      proxy_set_header Upgrade $http_upgrade;
+      proxy_set_header Connection "upgrade";
+      proxy_http_version 1.1;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header Host $host;
+      proxy_pass http://$container:15000;
     }
 }
 
@@ -61,7 +91,7 @@ server {
       proxy_http_version 1.1;
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
       proxy_set_header Host $host;
-      proxy_pass https://$container:8080;
+      proxy_pass http://$container:8080;
     }
 }
 
@@ -91,14 +121,14 @@ server {
       proxy_http_version 1.1;
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
       proxy_set_header Host $host;
-      proxy_pass https://$container:4000;
+      proxy_pass http://$container:4000;
     }
 }
 
 
 server {
     listen 443;
-    server_name ~^(?<container>.*)\-(rails|ruby23|ruby22)\.swarm.codeground.xyz$ ~^(?<container>.*)\-(rails|ruby23|ruby22)\.codeground.xyz$ ~^(?<container>.*)\-(rails|ruby23|ruby22)\.codepicnic.com$;
+    server_name ~^(?<container>.*)\-(rails|ruby23|ruby22|ruby)\.swarm.codeground.xyz$ ~^(?<container>.*)\-(rails|ruby23|ruby22)\.codeground.xyz$ ~^(?<container>.*)\-(rails|ruby23|ruby22|ruby)\.codepicnic.com$;
    ssl on;
    ssl_certificate /etc/nginx/conf.d/nginx.crt;
    ssl_certificate_key /etc/nginx/conf.d/nginx.key;
@@ -121,9 +151,38 @@ server {
       proxy_http_version 1.1;
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
       proxy_set_header Host $host;
-      proxy_pass https://$container:3000;
+      proxy_pass http://$container:3000;
     }
 }
 
 
+
+server {
+    listen 443;
+    server_name ~^(?<container>.*)\-(django)\.codepicnic.com$;
+   ssl on;
+   ssl_certificate /etc/nginx/conf.d/nginx.crt;
+   ssl_certificate_key /etc/nginx/conf.d/nginx.key;
+   ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
+   ssl_prefer_server_ciphers on;
+   ssl_ciphers AES256+EECDH:AES256+EDH:!aNULL;
+   add_header 'Access-Control-Allow-Origin' '*';
+   error_page 502 /502.html;
+   location = /502.html {
+      add_header 'Access-Control-Allow-Origin' '*';
+      rewrite ^ https://codepicnic.com/502;
+   }
+
+   error_log /var/log/nginx/swarm.codepicnic.com-error.log warn;
+   access_log  /var/log/nginx/swarm.codepicnic.com-access.log  main;
+
+   location / {
+      proxy_set_header Upgrade $http_upgrade;
+      proxy_set_header Connection "upgrade";
+      proxy_http_version 1.1;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header Host $host;
+      proxy_pass http://$container:8000;
+    }
+}
 
