--- a/ansible/roles/swarm-node/files/backend.conf
+++ b/ansible/roles/swarm-node/files/backend.conf
@@ -20,7 +20,8 @@ server {
    error_page 502 /502.html;
    location = /502.html {
       add_header 'Access-Control-Allow-Origin' '*';
-      rewrite ^ https://codepicnic.com/502;
+      root /etc/nginx/conf.d;
+      #rewrite ^ https://codepicnic.com/502;
    }
 
    error_log /var/log/nginx/swarm.codepicnic.com-error.log warn;
@@ -49,7 +50,8 @@ server {
    error_page 502 /502.html;
    location = /502.html {
       add_header 'Access-Control-Allow-Origin' '*';
-      rewrite ^ https://codepicnic.com/502;
+      root /etc/nginx/conf.d;
+      #rewrite ^ https://codepicnic.com/502;
    }
 
    error_log /var/log/nginx/swarm.codepicnic.com-error.log warn;
@@ -68,7 +70,7 @@ server {
 
 server {
    listen 443;
-   server_name ~^(?<container>.*)\-(bash|php|php7|laravel|elixir|mono)\.swarm.codeground.xyz$ ~^(?<container>.*)\-(bash|php|php7|laravel|elixir|mono)\.swarm.codeground.xyz$ ~^(?<container>.*)\-(bash|php|php7|laravel|elixir|mono)\.codepicnic.com$;
+   server_name ~^(?<container>.*)\-(nodejs|node|python|bash|php|php7|laravel|elixir|mono|swift)\.swarm.codeground.xyz$ ~^(?<container>.*)\-(nodejs|node|python|bash|php|php7|laravel|elixir|mono|swift)\.swarm.codeground.xyz$ ~^(?<container>.*)\-(nodejs|python|node|bash|php|php7|laravel|elixir|mono|swift)\.codepicnic.com$;
    ssl on;
    ssl_certificate /etc/nginx/conf.d/nginx.crt;
    ssl_certificate_key /etc/nginx/conf.d/nginx.key;
@@ -79,7 +81,8 @@ server {
    error_page 502 /502.html;
    location = /502.html {
       add_header 'Access-Control-Allow-Origin' '*';
-      rewrite ^ https://codepicnic.com/502;
+      root /etc/nginx/conf.d;
+      #rewrite ^ https://codepicnic.com/502;
    }
 
    error_log /var/log/nginx/swarm.codepicnic.com-error.log warn;
@@ -109,7 +112,8 @@ server {
    error_page 502 /502.html;
    location = /502.html {
       add_header 'Access-Control-Allow-Origin' '*';
-      rewrite ^ https://codepicnic.com/502;
+      root /etc/nginx/conf.d;
+      #rewrite ^ https://codepicnic.com/502;
    }
 
    error_log /var/log/nginx/swarm.codepicnic.com-error.log warn;
@@ -139,7 +143,8 @@ server {
    error_page 502 /502.html;
    location = /502.html {
       add_header 'Access-Control-Allow-Origin' '*';
-      rewrite ^ https://codepicnic.com/502;
+      root /etc/nginx/conf.d;
+      #rewrite ^ https://codepicnic.com/502;
    }
 
    error_log /var/log/nginx/swarm.codepicnic.com-error.log warn;
@@ -170,7 +175,8 @@ server {
    error_page 502 /502.html;
    location = /502.html {
       add_header 'Access-Control-Allow-Origin' '*';
-      rewrite ^ https://codepicnic.com/502;
+      root /etc/nginx/conf.d;
+      #rewrite ^ https://codepicnic.com/502;
    }
 
    error_log /var/log/nginx/swarm.codepicnic.com-error.log warn;
@@ -183,6 +189,37 @@ server {
       proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
       proxy_set_header Host $host;
       proxy_pass http://$container:8000;
+    }
+}
+
+
+server {
+    listen 443;
+    server_name ~^(?<container>.*)\-(perfect)\.codepicnic.com$;
+   ssl on;
+   ssl_certificate /etc/nginx/conf.d/nginx.crt;
+   ssl_certificate_key /etc/nginx/conf.d/nginx.key;
+   ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
+   ssl_prefer_server_ciphers on;
+   ssl_ciphers AES256+EECDH:AES256+EDH:!aNULL;
+   add_header 'Access-Control-Allow-Origin' '*';
+   error_page 502 /502.html;
+   location = /502.html {
+      add_header 'Access-Control-Allow-Origin' '*';
+      root /etc/nginx/conf.d;
+      #rewrite ^ https://codepicnic.com/502;
+   }
+
+   error_log /var/log/nginx/swarm.codepicnic.com-error.log warn;
+   access_log  /var/log/nginx/swarm.codepicnic.com-access.log  main;
+
+   location / {
+      proxy_set_header Upgrade $http_upgrade;
+      proxy_set_header Connection "upgrade";
+      proxy_http_version 1.1;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header Host $host;
+      proxy_pass http://$container:8181;
     }
 }
 
