remove repeated items from nginx configuration

--- a/ansible/roles/swarm-node/files/backend.conf
+++ b/ansible/roles/swarm-node/files/backend.conf
@@ -8,7 +8,6 @@ server {
 }
 server {
    listen 443;
-   #server_name ~^(?<container>.*)\-console\.swarm.codepicnic.com$  ~^(?<container>.*)\-console\.codeground.xyz$ ~^(?<container>.*)\-console\.codepicnic.com$;
    server_name ~^(?<container>.*)\-console\.swarm.codepicnic.com$;
    ssl on;
    ssl_certificate /etc/nginx/conf.d/nginx.crt;
@@ -70,7 +69,7 @@ server {
 
 server {
    listen 443;
-   server_name ~^(?<container>.*)\-(nodejs|node|python|bash|php|php7|laravel|elixir|mono|swift)\.swarm.codeground.xyz$ ~^(?<container>.*)\-(nodejs|node|python|bash|php|php7|laravel|elixir|mono|swift)\.swarm.codeground.xyz$ ~^(?<container>.*)\-(nodejs|python|node|bash|php|php7|laravel|elixir|mono|swift)\.codepicnic.com$;
+   server_name ~^(?<container>.*)\-(nodejs|node|python|bash|php|php7|laravel|elixir|mono|swift)\.(.*)$;
    ssl on;
    ssl_certificate /etc/nginx/conf.d/nginx.crt;
    ssl_certificate_key /etc/nginx/conf.d/nginx.key;
@@ -101,7 +100,7 @@ server {
 
 server {
    listen 443;
-   server_name ~^(?<container>.*)\-(phoenix)\.swarm.codeground.xyz$ ~^(?<container>.*)\-(phoenix)\.codeground.xyz$ ~^(?<container>.*)\-(phoenix)\.codepicnic.com$;
+   server_name ~^(?<container>.*)\-(phoenix)\.(.*)$;
    ssl on;
    ssl_certificate /etc/nginx/conf.d/nginx.crt;
    ssl_certificate_key /etc/nginx/conf.d/nginx.key;
@@ -132,7 +131,7 @@ server {
 
 server {
     listen 443;
-    server_name ~^(?<container>.*)\-(rails|ruby23|ruby22|ruby)\.swarm.codeground.xyz$ ~^(?<container>.*)\-(rails|ruby23|ruby22)\.codeground.xyz$ ~^(?<container>.*)\-(rails|ruby23|ruby22|ruby)\.codepicnic.com$;
+    server_name ~^(?<container>.*)\-(rails|ruby23|ruby22|ruby)\.(.*)$;
    ssl on;
    ssl_certificate /etc/nginx/conf.d/nginx.crt;
    ssl_certificate_key /etc/nginx/conf.d/nginx.key;
@@ -164,7 +163,7 @@ server {
 
 server {
     listen 443;
-    server_name ~^(?<container>.*)\-(django)\.codepicnic.com$;
+    server_name ~^(?<container>.*)\-(django)\.(.*)$;
    ssl on;
    ssl_certificate /etc/nginx/conf.d/nginx.crt;
    ssl_certificate_key /etc/nginx/conf.d/nginx.key;
@@ -195,7 +194,7 @@ server {
 
 server {
     listen 443;
-    server_name ~^(?<container>.*)\-(perfect)\.codepicnic.com$;
+    server_name ~^(?<container>.*)\-(perfect)\.(.*)$;
    ssl on;
    ssl_certificate /etc/nginx/conf.d/nginx.crt;
    ssl_certificate_key /etc/nginx/conf.d/nginx.key;
@@ -222,4 +221,5 @@ server {
       proxy_pass http://$container:8181;
     }
 }
+
 
