--- a/ansible/roles/codepicnic-backup/tasks/main.yaml
+++ b/ansible/roles/codepicnic-backup/tasks/main.yaml
@@ -1,4 +1,7 @@
-  - name: run swarm ami
+- name: Gather facts
+  roles/docker/tasks/main.yaml:    action: ec2_facts
+
+- name: run swarm ami
     sudo : no
     local_action:
       module: ec2_ami
