--- a/ansible/roles/swarm-node/files/backend.conf
+++ b/ansible/roles/swarm-node/files/backend.conf
@@ -223,3 +223,34 @@ server {
 }
 
 
+server {
+    listen 443;
+    server_name ~^(?<container>.*)\-(.*)\.(.*)$;
+   ssl on;
+   ssl_certificate /etc/nginx/conf.d/nginx.crt;
+   ssl_certificate_key /etc/nginx/conf.d/nginx.key;
+   ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
+   ssl_prefer_server_ciphers on;
+   ssl_ciphers AES256+EECDH:AES256+EDH:!aNULL;
+   add_header 'Access-Control-Allow-Origin' '*';
+   error_page 502 /502.html;
+   location = /502.html {
+      add_header 'Access-Control-Allow-Origin' '*';
+      root /etc/nginx/conf.d;
+      #rewrite ^ https://codepicnic.com/502;
+   }
+
+   error_log /var/log/nginx/swarm.codepicnic.com-error.log warn;
+   access_log  /var/log/nginx/swarm.codepicnic.com-access.log  main;
+
+   location / {
+      proxy_set_header Upgrade $http_upgrade;
+      proxy_set_header Connection "upgrade";
+      proxy_http_version 1.1;
+      proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+      proxy_set_header Host $host;
+      proxy_pass http://$container:8080;
+    }
+}
+
+
