--- a/ansible/deploy-codepicnic.yaml
+++ b/ansible/deploy-codepicnic.yaml
@@ -5,21 +5,21 @@
         #- aws-sg 
 - hosts: app 
   roles:
-      - base 
-      - nginx
-      - passenger
-      - rails
-      - codepicnic-app
+      #- base 
+      #- nginx
+      #- passenger
+      #- rails
+      #- codepicnic-app
   remote_user: ubuntu
   become: yes
   become_user: root
   become_method: sudo
 - hosts: db 
   roles:
-      - base 
-      - redis 
-      - mysql
-      - codepicnic-db 
+      #- base 
+      #- redis 
+      #- mysql
+      #- codepicnic-db 
   remote_user: ubuntu
   become: yes
   become_user: root
