--- a/ansible/deploy-codepicnic.yaml
+++ b/ansible/deploy-codepicnic.yaml
@@ -2,7 +2,8 @@
   connection: local
   roles:
       - aws-keys
-      - codepicnic-sg 
+      - codepicnic-sg
+      - codepicnic-elb 
 - hosts: app 
   roles:
       #- base 
