--- a/ansible/roles/aws-iam/tasks/main.yaml
+++ b/ansible/roles/aws-iam/tasks/main.yaml
@@ -1,5 +1,12 @@
-- name: Create two new IAM users with API keys
+- name: Create new EC2 iam role
   iam:
     iam_type: role 
     name: "{{ ec2_iam_role }}"
     state: present
+- name: Add cloudwatch policy
+  iam_policy:
+    iam_type: role 
+    name: "{{ ec2_iam_role }}"
+    policy_name: "pol_{{ ec2_iam_role }}_cloudwatch"
+    state: present
+    policy_json: " {{ lookup( 'template', 'cloudwatch.json') }} "
