--- a/ansible/roles/aws-iam/tasks/main.yaml
+++ b/ansible/roles/aws-iam/tasks/main.yaml
@@ -6,7 +6,7 @@
 - name: Add cloudwatch policy
   iam_policy:
     iam_type: role 
-    name: "{{ ec2_iam_role }}"
+    iam_name: "{{ ec2_iam_role }}"
     policy_name: "pol_{{ ec2_iam_role }}_cloudwatch"
     state: present
     policy_json: " {{ lookup( 'template', 'cloudwatch.json') }} "
