--- a/ansible/deploy-codepicnic.yaml
+++ b/ansible/deploy-codepicnic.yaml
@@ -10,7 +10,9 @@
   roles:
       - base
       - sysdig
-      - newrelic 
+      - newrelic
+      - ruby22
+      - passenger 
       #- nginx
       #- passenger
       #- rails
