--- a/ansible/roles/ruby22/tasks/main.yaml
+++ b/ansible/roles/ruby22/tasks/main.yaml
@@ -4,4 +4,13 @@
   apt_key: keyserver=keyserver.ubuntu.com id=C3173AA6
 - name: apt-get update
   apt: update_cache=yes
-
+- name: install ruby
+  apt: name=ruby2.2 ruby2.2-dev state=latest
+- name: update alternatives
+  shell: update-alternatives --install /usr/bin/gem gem /usr/bin/gem2.2 191
+#alternatives: name="{{ item.name }}" path="{{ item.path }}"
+#  with_items: "{{ alternatives }}"
+- name: update alternatives
+  shell: update-alternatives --install /usr/bin/ruby ruby /usr/bin/ruby2.2 61
+- name: install rake bundler
+  shell: gem2.2 install rake bundler --no-rdoc --no-ri
