--- a/ansible/roles/passenger/tasks/main.yaml
+++ b/ansible/roles/passenger/tasks/main.yaml
@@ -1,4 +1,6 @@
-- name: enable ruby repo
+- name: add app user
+  user: name=app comment="John Doe" group=app
+- name: enable passenger repo
   apt_repository: repo='deb https://oss-binaries.phusionpassenger.com/apt/passenger trusty main' state=present 
 - name: add key
   apt_key: keyserver=keyserver.ubuntu.com id=561F9B9CAC40B2F7
