--- a/ansible/deploy-codepicnic.yaml
+++ b/ansible/deploy-codepicnic.yaml
@@ -14,6 +14,7 @@
       - newrelic
       - ruby22
       - passenger
+      - codepicnic-app
       #- nginx
       #- passenger
       #- rails
@@ -27,7 +28,8 @@
       - codepicnic-base
       - base
       - sysdig
-      - newrelic 
+      - newrelic
+      - mariadb 
       #- redis 
       #- mysql
       #- codepicnic-db 
