--- a/ansible/roles/mariadb/tasks/main.yaml
+++ b/ansible/roles/mariadb/tasks/main.yaml
@@ -5,6 +5,8 @@
 #Once the key is imported and the repository added you can install MariaDB with:
 #sudo apt-get update
 #sudo apt-get install mariadb-server
+- name: install dev-tools
+  apt: name=git,g++,libxml2-dev,libxslt1-dev,zlib1g-dev,python-dev,libssl-dev state=latest
 - name: enable mariadb repo
   apt_repository: repo='deb [arch=amd64,i386] http://mirror.edatel.net.co/mariadb/repo/10.0/ubuntu trusty main' state=present
 - name: add key
@@ -12,6 +14,6 @@
 - name: apt-get update
   apt: update_cache=yes
 - name: install mariadb-server 
-  apt: name=software-properties-common,mariadb-server state=latest
+  apt: name=software-properties-common,mariadb-server,libmariadbd-dev state=latest
 - name: install mysqldb
   pip: name=MySQL-python
