--- a/ansible/roles/swarm-node/files/backend.conf
+++ b/ansible/roles/swarm-node/files/backend.conf
@@ -163,7 +163,7 @@ server {
 
 server {
     listen 443;
-    server_name ~^(?<container>.*)\-(django)\.(.*)$;
+    server_name ~^(?<container>.*)\-(django)\.codepicnic.com$;
    ssl on;
    ssl_certificate /etc/nginx/conf.d/nginx.crt;
    ssl_certificate_key /etc/nginx/conf.d/nginx.key;
@@ -194,7 +194,7 @@ server {
 
 server {
     listen 443;
-    server_name ~^(?<container>.*)\-(perfect)\.(.*)$;
+    server_name ~^(?<container>.*)\-(perfect)\.codepicnic.com$;
    ssl on;
    ssl_certificate /etc/nginx/conf.d/nginx.crt;
    ssl_certificate_key /etc/nginx/conf.d/nginx.key;
@@ -225,7 +225,7 @@ server {
 
 server {
     listen 443;
-    server_name ~^(?<container>.*)\-(.*)\.(.*)$;
+    server_name ~^(?<container>.*)\-(.*)\.codepicnic.com$;
    ssl on;
    ssl_certificate /etc/nginx/conf.d/nginx.crt;
    ssl_certificate_key /etc/nginx/conf.d/nginx.key;
@@ -252,5 +252,7 @@ server {
       proxy_pass http://$container:8080;
     }
 }
+
+
 
 
