--- a/ansible/roles/codepicnic-app/templates/workers.conf
+++ b/ansible/roles/codepicnic-app/templates/workers.conf
@@ -20,7 +20,7 @@ exec /bin/bash <<'EOT'
   # rbenv
   # source /home/apps/.bash_profile
   # OR
-  source {{ deployment_dir }}/.profile
+  source {{ deployment_home  }}/.profile
   # OR system:
   # source /etc/profile.d/rbenv.sh
   #
