--- a/ansible/roles/redis/tasks/main.yaml
+++ b/ansible/roles/redis/tasks/main.yaml
@@ -5,8 +5,8 @@
   - name: unzip redis 
     unarchive: src=/opt/redis-stable.tar.gz dest=/opt/ copy=no 
   - name: build redis
-    command: chdir=/opt/redis-stable "{{ item }}" 
+    shell: chdir=/opt/redis-stable "{{ item }}" 
     with_items:
-    - make
-    - make install
-    - echo -n | utils/install_server.sh 
+    - "make"
+    - "make install"
+    - "echo -n | utils/install_server.sh"
