--- a/ansible/roles/codepicnic-app/tasks/main.yaml
+++ b/ansible/roles/codepicnic-app/tasks/main.yaml
@@ -4,6 +4,8 @@
   - restart nginx 
 - name: Add app user 
   action: user name={{ app_user }}
+- name: docker dir
+  file: path=/home/codepicnic/.ssh state=directory mode=700 owner=app
 - name: key 
   copy: src=key_codepicnic_deploy.id_rsa dest="/home/{{ app_user }}/.ssh/id_rsa" owner=app mode=600
 - name: clone  
