--- a/ansible/roles/codepicnic-app/tasks/main.yaml
+++ b/ansible/roles/codepicnic-app/tasks/main.yaml
@@ -10,6 +10,8 @@
   copy: src=key_codepicnic_deploy.id_rsa dest="/home/{{ app_user }}/.ssh/id_rsa" owner=app mode=600
 - name: clone  
   git: repo=git@github.com:CodePicnic/CodePicnic.git clone=yes version="{{ app_branch }}" dest="/home/{{ app_user }}/app" accept_hostkey=True
+  become: yes
+  become_user: "{{ app_user }}"
 - name: upstart workers 
   template: src=workers.conf dest=/etc/init/workers.conf
   notify:
