change application user

--- a/ansible/roles/codepicnic-app/tasks/main.yaml
+++ b/ansible/roles/codepicnic-app/tasks/main.yaml
@@ -16,6 +16,8 @@
   git: repo=git@github.com:CodePicnic/CodePicnic.git clone=yes version="{{ app_branch }}" dest="/home/{{ app_user }}/app" accept_hostkey=True
   become: yes
   become_user: "{{ app_user }}"
+- name: permissions
+  file: path="/home/{{ app_user }}/app" owner="{{ deployment_user }}" group="{{ app_user }}" recurse=yes mode=775
 - name: upstart workers 
   template: src=workers.conf dest=/etc/init/workers.conf
   notify:
